# NiMARE

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  asv.conf.json  circle.yml  create_dockerfile.sh  download_test_data.py  get_version.py  pypi_description.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_BACKUP_7408.cfg  setup_BASE_7408.cfg  setup_LOCAL_7408.cfg  test_results_v5.txt  update_changes.sh
.circleci/: artifact_path  config.yml
.github/: .release.yml  config.yml  pull_request_template.md  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  build-pyodide.yml  linting.yml  python-publish.yml  testing.yml  update-changelog.yml  wheels.yml
.skills/: README.md
.skills/dev_environment/: SKILL.md
.skills/reviewing_code/: SKILL.md
.skills/running_tests/: SKILL.md
.skills/writing_code/: SKILL.md
benchmarks/: bench_cbma.py  bench_ibma.py.bak
binder/: requirements.txt
cibma/: version.py
doc/: Makefile  api.rst  conf.py  index.rst  introduction.rst
doc/_templates/: module.rst
doc/sphinxext/: github_link.py
docs/: Makefile  about.rst  api.rst  cbma.rst  changelog.rst  cli.rst  conf.py  contents.rst  contributing.rst  decoding.rst  dev_guide.rst  documentation.rst  ecosystem.rst  environment.yml  fetching.rst  glossary.rst  index.rst  installation.rst  introduction.rst  jupyter-lite.json  jupyter_lite_config.json  links.rst  make.bat  methods.rst  outputs.rst  references.bib  requirements-dev.txt  roadmap.rst  user_guide.rst
docs/_static/: nimare.css
docs/_templates/: class.rst  function.rst  indexsidebar.html  layout.html  navbar.html
docs/guide/: annotation.rst  cbma.rst  data.rst  decoding.rst  ibma.rst  introduction.rst  toc.rst
docs/methods/: cbma.rst  decoding.rst  fetching.rst
docs/sphinxext/: github_link.py
examples/: README.txt  compare_matlab_python.ipynb  coordinates.csv  generate_ma_maps.ipynb  nidm_pain_meta-analyses.ipynb  peaks2maps_demo.ipynb  save_nidm_to_dset.ipynb  studies.csv  test_performance.ipynb
examples/01_datasets/: 01_plot_dataset_io.py  02_download_neurosynth.py  03_plot_neurovault_io.py  04_transform_images_to_coordinates.py  05_plot_nimads.py  06_plot_dataset_json.py  README.txt  download_neurosynth.py  plot_dataset_io.py  plot_neurovault_io.py  plot_transform_images_to_coordinates.py  transform_images_to_coordinates.py
examples/01_meta-analyses/: README.txt  plot_generate_ma_maps.py  plot_ibmas.py
examples/02_annotate/: README.txt
examples/02_meta-analyses/: 01_plot_cbma.py  01_plot_correctors.py  01_plot_generate_ma_maps.py  02_plot_cbma.py  02_plot_ibma.py  03_macm.py  03_plot_compare_ibma_and_cbma.py  03_plot_kernel_transformers.py  04_macm.py  04_plot_cbma_combine_estimators_and_kernels.py  04_plot_estimators.py  05_plot_cbma_subtraction_conjunction.py  05_plot_correctors.py  06_plot_compare_ibma_and_cbma.py  06_plot_generate_ma_maps.py  06_plot_ibma.py  07_macm.py  07_plot_cbma_combine_estimators_and_kernels.py  07_plot_compare_ibma_and_cbma.py  08_plot_cbma_subtraction_conjunction.py  08_plot_simulated_data.py  09_peaks2maps.py  09_plot_simulated_data.py  10_peaks2maps.py  10_plot_cbma_workflow.py  10_plot_cbmr.ipynb  10_plot_cbmr.py  10_plot_cbmr_2.ipynb  11_plot_cbmr.py  12_compare_cbmr_and_cbma.py  12_plot_compare_cbmr_and_cbma.py  12_plot_ibma_workflow.py  13_compare_cbmr_and_cbma.py  13_plot_sdm.py  README.txt  cbma.py  generate_data.py  generate_ma_maps.py  ibma.py  macm.py  (+13 more)
examples/02_other/: README.txt
examples/03_annotation/: 01_plot_gclda.py  01_plot_tfidf.py  02_lda.py  02_plot_cognitive_atlas.py  03_lda.py  03_plot_cognitive_atlas.py  03_plot_lda.py  04_plot_gclda.py  README.txt  lda.py  plot_cognitive_atlas.py  plot_gclda.py  plot_run_gclda.py  run_gclda.py  run_lda.py
examples/03_decoding/: README.txt
examples/04_decoding/: 01_plot_discrete_decoders.py  02_plot_continuous_decoders.py  README.txt  plot_discrete_decoders.py
examples/example_data/: tmp.json
examples/misc-notebooks/: neurosynth_pain-cbmr.ipynb  nidm_pain_meta-analyses.ipynb  save_nidm_to_dset.ipynb
examples/utils/: download_collection.ipynb  nidm_pain_meta-analyses.ipynb  nidm_utils.py  save_nidm_to_dset.ipynb
nimare/: __init__.py  _studyset_store.py  _version.py  base.py  cli.py  correct.py  dataset.py  diagnostics.py  due.py  estimator.py  exceptions.py  generate.py  info.py  io.py  nimads.py  parcellate.py  references.py  results.py  stats.py  studyset.py  transforms.py  utils.py  version.py
nimare/annotate/: __init__.py  base.py  boltzmann.py  cogat.py  cogpo.py  gclda.py  lda.py  ontology.py  text.py  text2brain.py  tfidf.py  utils.py  word2brain.py
nimare/base/: __init__.py  annotate.py  base.py  data.py  decode.py  estimators.py  inputs.py  meta.py  misc.py
nimare/correct/: __init__.py  base.py  correct.py  fdr.py
nimare/dataset/: __init__.py  base.py  data.py  dataset.py  extract.py
nimare/decode/: __init__.py  base.py  continuous.py  discrete.py  encode.py  utils.py
nimare/diagnostics/: __init__.py
nimare/extract/: __init__.py  cognitiveatlas.py  extract.py  utils.py
nimare/meta/: __init__.py  ale.py  base.py  cbma.py  cbmr.py  esma.py  ibma.py  kernel.py  mkda.py  models.py  peaks2maps.py  utils.py
nimare/parcellate/: __init__.py  base.py  cbp.py  mamp.py  mapbot.py
nimare/reports/: __init__.py  base.py  default.yml  figures.py  report.tpl
nimare/resources/: Enge2021_objects_mni.txt  Enge2021_objects_talairach.txt  Enge2021_relatedness.txt  __init__.py  database_file_manifest.json  english_spellings.csv  filenames.json  neurosynth_stoplist.txt  nidm_pain_dset.json  nidm_pain_dset_with_subpeaks_docker.json  nidm_pain_studyset.json  references.bib
nimare/test/: dset.json
nimare/tests/: __init__.py  conftest.py  test_annotate_cogat.py  test_annotate_gclda.py  test_annotate_lda.py  test_annotate_text.py  (+44 more)
(+90 files in other folders)
