[build-system]
requires = ["setuptools==40.8", "wheel"]

[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | nimare/info.py
  | nimare/_version.py
  | nimare/due.py
)
'''

[tool.pytest.ini_options]
markers = [
    "performance: mark tests that measure performance (deselect with '-m \"not performance\"')",
]

[tool.isort]
profile = "black"
multi_line_output = 3
