[metadata]
url = https://github.com/neurostuff/NiMARE
license = MIT
author = NiMARE developers
author_email = tsalo006@fiu.edu
maintainer = Taylor Salo
maintainer_email = tsalo006@fiu.edu
description = NiMARE: Neuroimaging Meta-Analysis Research Environment
description-file = README.md
long_description =
    NiMARE
    ======
    NiMARE (Neuroimaging Meta-Analysis Research Environment) is a Python package
    for coordinate-based and image-based meta-analysis of neuroimaging data.

    License
    =======
    `NiMARE` is licensed under the terms of the MIT license. See the file
    'LICENSE' for information on the history of this software, terms & conditions
    for usage, and a DISCLAIMER OF ALL WARRANTIES.

    All trademarks referenced herein are property of their respective holders.

    Copyright (c) 2018--, NiMARE developers
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.6
install_requires =
    cognitiveatlas  # nimare.annotate.cogat
    fuzzywuzzy  # nimare.annotate
    indexed_gzip>=1.4.0  # working with gzipped niftis
    joblib  # parallelization
    matplotlib>=3.3  # this is for nilearn, which doesn't include it in its reqs
    nibabel>=3.0.0  # I/O of niftis
    nilearn>=0.9.2
    numba  # used by sparse
    numpy<1.24,>=1.18 # for compatibility with numba https://github.com/numba/numba/issues/8615
    pandas>=1.1.0
    pymare~=0.0.4rc2  # nimare.meta.ibma and stats
    requests  # nimare.extract
    scikit-learn  # nimare.annotate and nimare.decode
    scipy
    sparse>=0.13.0  # for kernel transformers
    statsmodels!=0.13.2  # this version doesn't install properly
    tqdm  # progress bars throughout package
packages = find:
include_package_data = False

[options.extras_require]
doc =
    m2r
    matplotlib
    mistune<2  # just temporary until m2r addresses this issue
    pillow
    recommonmark
    seaborn
    sphinx>=3.5
    sphinx-argparse
    sphinx-copybutton
    sphinx_gallery==0.10.1
    sphinx_rtd_theme
    sphinxcontrib-bibtex
tests =
    codecov
    coverage
    coveralls
    flake8-black
    flake8-docstrings
    flake8-isort
    pytest
    pytest-cov
minimum =
    indexed_gzip==1.4
    matplotlib==3.3.4
    nibabel==3.0
    nilearn==0.9.2
    numpy==1.18
    pandas==1.1
    pymare==0.0.4rc2
    scikit-learn==0.22
    scipy==1.5  # 1.6 drops Python 3.6 support
all =
    %(doc)s
    %(tests)s

[options.entry_points]
console_scripts =
    nimare = nimare.cli:_main

[options.package_data]
* =
    resources/*
    resources/atlases/*
    resources/templates/*
    tests/data/*
    tests/data/cognitive_atlas/*

[versioneer]
VCS = git
style = pep440
versionfile_source = nimare/_version.py
versionfile_build = nimare/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude = *build/,_version.py
putty-ignore =
    */__init__.py : +F401
per-file-ignores =
    */__init__.py:D401
    nimare/utils.py:D401
ignore = E203,E402,E722,W503
docstring-convention = numpy
