[metadata]
url = https://github.com/neurostuff/NiMARE
license = MIT
author = NiMARE developers
author_email = tsalo006@fiu.edu
maintainer = Taylor Salo
maintainer_email = tsalo006@fiu.edu
description = NiMARE: Neuroimaging Meta-Analysis Research Environment
description-file = README.md
long_description =
    NiMARE
    ======
    NiMARE (Neuroimaging Meta-Analysis Research Environment) is a Python package
    for coordinate-based and image-based meta-analysis of neuroimaging data.

    License
    =======
    `NiMARE` is licensed under the terms of the MIT license. See the file
    'LICENSE' for information on the history of this software, terms & conditions
    for usage, and a DISCLAIMER OF ALL WARRANTIES.

    All trademarks referenced herein are property of their respective holders.

    Copyright (c) 2018--, NiMARE developers
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.8
install_requires =
    cognitiveatlas  # nimare.annotate.cogat
    fuzzywuzzy  # nimare.annotate
    jinja2 # nimare.reports
    joblib>=1.3.0  # parallelization
    matplotlib>=3.5.2  # this is for nilearn, which doesn't include it in its reqs
    nibabel>=3.2.0  # I/O of niftis
    nilearn>=0.10.1,<0.10.3 # until https://github.com/nilearn/nilearn/pull/4256 is resolved
    numba>=0.57.0 # used by sparse
    numpy>=1.22 # numba needs NumPy 1.22 or greater
    pandas>=2.0.0
    patsy  # for cbmr
    plotly  # nimare.reports
    pymare~=0.0.4rc2  # nimare.meta.ibma and stats
    pyyaml # nimare.reports
    requests  # nimare.extract
    ridgeplot  # nimare.reports
    scikit-learn>=1.0.0  # nimare.annotate and nimare.decode
    scipy>=1.6.0
    sparse>=0.13.0  # for kernel transformers
    statsmodels!=0.13.2  # this version doesn't install properly
    tqdm  # progress bars throughout package
packages = find:
include_package_data = False

[options.extras_require]
gzip = 
    indexed_gzip>=1.4.0  # working with gzipped niftis
cbmr = 
    torch>=2.0 # for cbmr models
doc =
    m2r
    matplotlib
    mistune<2  # just temporary until m2r addresses this issue
    pillow
    recommonmark
    seaborn
    sphinx>=3.5
    sphinx-argparse
    sphinx-copybutton
    sphinx-gallery
    sphinx_rtd_theme>=1.3.0
    sphinxcontrib-bibtex
tests =
    coverage
    coveralls
    flake8-black
    flake8-docstrings
    flake8-isort
    pytest
    pytest-cov
minimum =
    matplotlib==3.5.2
    nibabel==4.0.0
    nilearn==0.10.1
    numpy==1.22
    pandas==2.0.0
    pymare==0.0.4rc2
    scikit-learn==1.0.0
    scipy==1.6.0
    seaborn==0.13.0
all =
    %(gzip)s
    %(cbmr)s
    %(doc)s
    %(tests)s

[options.entry_points]
console_scripts =
    nimare = nimare.cli:_main

[options.package_data]
* =
    resources/*
    resources/atlases/*
    resources/templates/*
    tests/data/*
    tests/data/cognitive_atlas/*
    reports/*

[versioneer]
VCS = git
style = pep440
versionfile_source = nimare/_version.py
versionfile_build = nimare/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude = *build/,_version.py
putty-ignore =
    */__init__.py : +F401
per-file-ignores =
    */__init__.py:D401
    nimare/utils.py:D401
ignore = E203,E402,E722,W503
docstring-convention = numpy
